/**
 * @file SovereignContext.ts
 * @version 1.0.0
 * @spec [Spec-001] Context Propagation v1.2.0
 * @spec [Spec-Dev-001] Memory Safety v1.6.0
 * 
 * Krepis Sovereign Contextì˜ êµ¬í˜„ì²´.
 * ì»¤ë„ë¡œë¶€í„° ë°›ì€ Protobuf ë°”ì´ë„ˆë¦¬ë¥¼ ë˜í•‘í•˜ê³  RAII íŒ¨í„´ìœ¼ë¡œ ìƒëª…ì£¼ê¸°ë¥¼ ê´€ë¦¬í•©ë‹ˆë‹¤.
 */

import * as protobuf from "npm:protobufjs@^7.2.5";
import {
  type IKrepisContext,
  type ContextOptions,
  ContextState,
} from "./IKrepisContext.ts";

const Root = protobuf.Root || (protobuf as any).default?.Root;
if (!Root) {
  throw new Error("[FFI Envelope] Failed to load protobuf.Root. Check protobufjs installation.");
}

// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
// [1] Protobuf Schema Definition
// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”

/**
 * KrepisContext Protobuf ìŠ¤í‚¤ë§ˆ.
 * 
 * ì°¸ì¡°: proto/context.proto
 */
const root = Root.fromJSON({
  nested: {
    krepis: {
      nested: {
        core: {
          nested: {
            KrepisContext: {
              fields: {
                request_id: { type: "string", id: 1 },
                tenant_id: { type: "string", id: 2 },
                priority: { type: "uint32", id: 3 },
                is_turbo_mode: { type: "bool", id: 4 },
                trace_id: { type: "string", id: 5 },     
                timestamp: { type: "int64", id: 6 },
                metadata: { 
                  keyType: "string", 
                  type: "string", 
                  id: 7 
                } as protobuf.IMapField,
              },
            },
          },
        },
      },
    },
  },
});

const KrepisContextProto = root.lookupType("krepis.core.KrepisContext");

// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
// [2] Protobuf Data Interface
// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”

/**
 * Protobuf ë””ì½”ë”© ê²°ê³¼ íƒ€ì….
 */
interface KrepisContextData {
  requestId: string;
  tenantId: string;
  priority: number;
  isTurboMode: boolean;
  traceId: string;
  timestamp: number | Long;
  metadata: { [key: string]: string };
}

// Long íƒ€ì… ì§€ì› (protobufjs)
interface Long {
  low: number;
  high: number;
  unsigned: boolean;
  toNumber(): number;
}

// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
// [3] SovereignContext Implementation
// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”

/**
 * Krepis Sovereign Context êµ¬í˜„ì²´.
 * 
 * ì´ í´ë˜ìŠ¤ëŠ” Rust ì»¤ë„ë¡œë¶€í„° ë°›ì€ Protobuf ë°”ì´ë„ˆë¦¬ë¥¼ íŒŒì‹±í•˜ê³ ,
 * TSì—ì„œ ì‚¬ìš© ê°€ëŠ¥í•œ í˜•íƒœë¡œ ì œê³µí•©ë‹ˆë‹¤.
 * 
 * âš ï¸ ì§ì ‘ ìƒì„±í•˜ì§€ ë§ˆì‹­ì‹œì˜¤. ContextFactory.create()ë¥¼ ì‚¬ìš©í•˜ì‹­ì‹œì˜¤.
 */
export class SovereignContext implements IKrepisContext {
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  // Private Fields
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  
  private readonly _binary: Uint8Array;
  private readonly _data: KrepisContextData;
  private _state: ContextState;
  
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  // Constructor (Internal)
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  
  /**
   * @internal
   * ContextFactoryì—ì„œë§Œ í˜¸ì¶œë©ë‹ˆë‹¤.
   */
  constructor(binary: Uint8Array) {
    this._binary = binary;
    try {
      const message = KrepisContextProto.decode(binary);
      // toObjectë¥¼ í†µí•´ ëª…í™•í•œ ê°ì²´ë¡œ ë³€í™˜
      const decoded = KrepisContextProto.toObject(message, {
        defaults: true,
        longs: String,
      }) as any;

      this._data = {
        requestId: decoded.requestId || decoded.request_id,
        tenantId: decoded.tenantId || decoded.tenant_id,
        priority: Number(decoded.priority),
        isTurboMode: Boolean(decoded.isTurboMode ?? decoded.is_turbo_mode),
        traceId: decoded.traceId || decoded.trace_id,
        timestamp: Number(decoded.timestamp),
        metadata: decoded.metadata || {},
      };
      this._state = ContextState.Active;
    } catch (err) {
      this._state = ContextState.Faulted;
      throw new Error(
        `[SovereignContext] Failed to decode Protobuf: ${
          err instanceof Error ? err.message : String(err)
        }`
      );
    }
  }
  
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  // IKrepisContext Implementation
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  
  get requestId(): string {
    this.ensureActive();
    return this._data.requestId;
  }
  
  get tenantId(): string {
    this.ensureActive();
    return this._data.tenantId;
  }
  
  get traceId(): string {
    this.ensureActive();
    return this._data.traceId;
  }
  
  get isTurboMode(): boolean {
    this.ensureActive();
    return this._data.isTurboMode;
  }
  
  get timestamp(): bigint {
    this.ensureActive();
    const ts = this._data.timestamp;

    if (typeof ts === "number") {
      return BigInt(ts);
    }

    if (ts && typeof ts === "object" && "toString" in ts) {
      return BigInt(ts.toString());
    }

    return 0n;
  }
  
  get priority(): number {
    this.ensureActive();
    return this._data.priority;
  }
  
  get binary(): Uint8Array {
    this.ensureActive();
    return this._binary;
  }
  
  getMetadata(key: string): string | undefined {
    this.ensureActive();
    return this._data.metadata[key];
  }
  
  getAllMetadata(): Readonly<Record<string, string>> {
    this.ensureActive();
    return Object.freeze({ ...this._data.metadata });
  }
  
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  // Disposable Implementation (RAII Pattern)
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  
  [Symbol.dispose](): void {
    if (this._state === ContextState.Disposed) {
      return; // ì´ë¯¸ íê¸°ë¨
    }
    
    // ìƒíƒœ ë³€ê²½
    this._state = ContextState.Disposed;
    
    // ë¦¬ì†ŒìŠ¤ ì •ë¦¬ ë¡œê¹…
    console.debug(
      `[SovereignContext] Disposed - RequestID: ${this._data.requestId}, ` +
      `TenantID: ${this._data.tenantId}`
    );
    
    // í–¥í›„ í™•ì¥: ì»¤ë„ì— release_context FFI í˜¸ì¶œ ì¶”ê°€ ê°€ëŠ¥
    // kernel.symbols.release_context(this._binary);
  }
  
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  // Internal Helpers
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  
  /**
   * ì»¨í…ìŠ¤íŠ¸ê°€ í™œì„± ìƒíƒœì¸ì§€ í™•ì¸í•˜ê³ , ì•„ë‹ˆë©´ ì—ëŸ¬ë¥¼ throwí•©ë‹ˆë‹¤.
   */
  private ensureActive(): void {
    if (this._state === ContextState.Disposed) {
      throw new Error(
        `[SovereignContext] Cannot access disposed context. ` +
        `RequestID: ${this._data.requestId}`
      );
    }
    
    if (this._state === ContextState.Faulted) {
      throw new Error(
        `[SovereignContext] Context is in faulted state. ` +
        `RequestID: ${this._data.requestId}`
      );
    }
  }
  
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  // Debug & Inspection
  // â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
  
  /**
   * ë””ë²„ê¹…ìš© ë¬¸ìì—´ í‘œí˜„.
   */
  toString(): string {
    return (
      `SovereignContext(` +
      `requestId=${this._data.requestId}, ` +
      `tenantId=${this._data.tenantId}, ` +
      `state=${this._state}` +
      `)`
    );
  }
  
  /**
   * êµ¬ì¡°í™”ëœ JSON í‘œí˜„ (ë¡œê¹…ìš©).
   */
  toJSON() {
    return {
      requestId: this._data.requestId,
      tenantId: this._data.tenantId,
      traceId: this._data.traceId,
      isTurboMode: this._data.isTurboMode,
      timestamp: this._data.timestamp,
      priority: this._data.priority,
      state: this._state,
      metadata: this._data.metadata,
    };
  }
  
  /**
   * ì»¨í…ìŠ¤íŠ¸ì˜ í˜„ì¬ ìƒíƒœë¥¼ ë°˜í™˜í•©ë‹ˆë‹¤ (internal use).
   * 
   * @internal
   */
  get _internalState(): ContextState {
    return this._state;
  }
}

// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
// [4] Protobuf Encoding (for FFI calls)
// â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”

/**
 * ContextOptionsë¥¼ Protobufë¡œ ì¸ì½”ë”©í•©ë‹ˆë‹¤.
 * 
 * @param options - ì»¨í…ìŠ¤íŠ¸ ì˜µì…˜
 * @returns ì§ë ¬í™”ëœ ë°”ì´ë„ˆë¦¬
 * 
 * @internal ContextFactoryì—ì„œ ì‚¬ìš©
 */
export function encodeContextOptions(options: ContextOptions): Uint8Array {
  const payload = {
    request_id: options.requestId || crypto.randomUUID(),
    tenant_id: options.tenantId,
    priority: options.priority ?? 5,
    is_turbo_mode: options.isTurboMode ?? false,
    trace_id: options.traceId || crypto.randomUUID(), // ğŸ‘ˆ ì´ì œ ì •ìƒ ì‘ë™
    timestamp: Date.now(),
    metadata: options.metadata || {},
  };

  const message = KrepisContextProto.create(payload);
  return KrepisContextProto.encode(message).finish();
}